# Algorithm-Visualizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/algorithms/: CMakeLists.txt  bubbleSort.cpp  bubbleSort.h  mergeSort.cpp  mergeSort.h  quickSort.cpp  quickSort.h  sorter.h
src/app/: CMakeLists.txt  VisualizerCanvas.cpp  VisualizerCanvas.hpp  controlsCanvas.cpp  controlsCanvas.hpp  graphCanvas.cpp  graphCanvas.hpp  main.cpp  main.hpp  mainFrame.cpp  mainFrame.hpp  mainWindow.cpp  mainWindow.hpp  random.h
